--- a/vignettes/BioinformaticsRERconvergeSupp.Rmd
+++ b/vignettes/BioinformaticsRERconvergeSupp.Rmd
@@ -181,15 +181,19 @@ multirers = returnRersAsTreesAll(toyTrees,mamRERw)
 write.tree(multirers, file='toyRERs.nwk', tree.names=TRUE)
 ```
 
-Another useful function for visualizing RERs for a givent tree is `treePlotRers`. When called with `type = label`, it will produce the same plot as shown above, i.e., a cladogram with the branches labeled by RER. Alternatively, when called with `type = color`, it will produce a cladogram with RERs displayed as a color heatmap on the branches.
+Another useful function for visualizing RERs for a given tree is `treePlotRers`. When called with `type = label`, it will produce the same plot as shown above, i.e., a cladogram with the branches labeled by RER. Alternatively, when called with `type = color`, it will produce a cladogram with RERs displayed as a color heatmap on the branches.
 
 ```{r fig2c, fig.height=9,fig.width=10, warning = FALSE, cache = TRUE, tidy = FALSE}
 #plot RERs as tree
 #par(mfrow=c(1,1))
-newbend3rers = treePlotRers(treesObj=toyTrees, rermat=mamRERw, index="BEND3", type="c", nlevels=9)
+#repopath = "~/Documents/Github/RERconverge"
+#source(paste(repopath,"/R/RERfuncs.R",sep=""))
+#source(paste(repopath,"/R/plottingFuncs.R",sep="")) #for troubleshooting margins
+newbend3rers = treePlotRers(treesObj=toyTrees, rermat=mamRERw, index="BEND3", 
+                            type="c", nlevels=9, figwid=10)
 ```
 
-The heatmap has 9 colors, corresponding to `nlevels=9`. The breaks are determined by quantiles of the RER distribution. For more information on options that can be passed to this function, see the documentation for `treePlotNew`.
+The heatmap has 9 colors, corresponding to `nlevels=9`. The breaks are determined by quantiles of the RER distribution, with separate quantiles computed for values below and above zero. When using a different device, you may need to adjust the `figwid` variable to display the full phylogeny with optimal aesthetics. For more information on options that can be passed to this function, see the documentation for `treePlotNew`.
 
 
 ## Binary Trait Analysis
@@ -199,7 +203,7 @@ Now we will associate variation in these RERs with variation in a **binary trait
 1) Provide a binary trait tree file. This should be a file in Newick format with branch lengths zero for background branches and one (or weights between zero and one) for foreground branches. Setting any branches to NA will exclude these branches from the analysis. An example binary tree file is provided in *extdata/MarineTreeBinCommonNames.txt*. This tree must have the same topology as the master tree or a subset of the master tree.
 
 ```{r fig3, fig.height=9,fig.width=10, warning = FALSE, cache = TRUE}
-marineb=read.tree(paste(rerpath,"/ext/MarineTreeBinCommonNames_noCGM.txt",sep=""))
+marineb=read.tree(paste(rerpath,"/extdata/MarineTreeBinCommonNames_noCGM.txt",sep=""))
 marinebrooted = root(marineb,outgroup=noneutherians)
 mb1 = marineb
 mb1$edge.length = c(rep(1,length(mb1$edge.length)))
