--- a/vignettes/BioinformaticsRERconvergeSupp.Rmd
+++ b/vignettes/BioinformaticsRERconvergeSupp.Rmd
@@ -1,14 +1,13 @@
 ---
-title:  | 
-  | SUPPLEMENTARY INFORMATION 
-  | RERconverge: an R package for associating evolutionary rates with convergent traits 
+title: "| SUPPLEMENTARY INFORMATION \n| RERconverge: an R package for associating
+  evolutionary rates with convergent traits \n"
 bibliography: RERConverge.bib
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output:
-  pdf_document:
-    toc: yes
   html_document:
     css: custom.css
+    toc: yes
+  pdf_document:
     toc: yes
 authors: Amanda Kowalczyk, Wynn K Meyer, Raghavendran Partha, Weiguang Mao, Nathan
   L Clark, and Maria Chikina
